# ModelNet10-classifier

./: .gitignore  MODELS.md  MODULES.md  README.md  README_VIC.md  makefile  pyproject.toml
scripts/: README.md  grid_training.py  infer_single.py  main.py  rebuild_figures.py  sequential_training.py  view_mesh.py  visualize_inference.py
src/: config.py  grid_training.py  main.py  off_object.py  rebuild_figures.py  sequential_trainer.py  sequential_training.py  train_classifier.py  visualize_inference.py
src/builders/: mesh_3D_builder.py
src/builders/utils/: conversion_off_obj.py  extract_modelnet10_test_dataset.py  format_parser.py
src/dataset/: __init__.py  base_modelnet_dataset.py  dataset.py  mesh_vertices_dataset.py  multi_representation_dataset.py  point_cloud_dataset.py
src/deep_learning/: configs.py  dataset_factory.py  grid_search.py  inference.py  model_trainer.py  plotting.py  result_utils.py  sequential_trainer.py  training.py
src/deep_learning/models/: DGCNN.py  PointNet.py  PointNetPP.py  PointTransformer.py  SimplePointNet.py  __init__.py  research-papers.txt
src/formats/: format_parser.py  off_mesh.py
src/geometry/: Mesh_3D.py  __init__.py  mesh3d.py  points_cloud.py  sampling.py
src/vision/sampling/: batch.py  batch_from_shaders.py  batch_stereovision.py  clean_folder.py  debug.py  reconstruct.py  reconstruct_from_shaders.py  reconstruct_stereovision.py
unity/Visual_V0/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
unity/Visual_V0/Assets/Editor/: ObjToPrefabs.cs
unity/Visual_V0/ProjectSettings/: ProjectSettings.asset
(+6 files in other folders)
